# deep-learning.cu

./: .gitignore  README.md  setup.py  torch_binding.cu
csrc/: common.hpp
csrc/kernels/: kernels.hpp  torch_binding.hpp
csrc/kernels/attention/: launch.cuh  torch_binding.cuh
csrc/kernels/attention/flash_attention/: fa_2_naive.cuh  launch.cuh  torch_binding.cuh
csrc/kernels/functions/: cuda_functions.cuh  reduction.cuh
csrc/kernels/layernorm/: intra_warp.cuh  launch.cuh  naive.cuh  shared_mem.cuh  torch_binding.cuh  variance_estimate.cuh
csrc/kernels/linear/: blocktiling_2d.cuh  launch.cuh  naive.cuh  shared_mem.cuh  torch_binding.cuh
csrc/kernels/matmul/: launch.cuh
csrc/kernels/position_encoder/: launch.cuh
csrc/kernels/position_encoder/add/: launch.cuh  naive.cuh
csrc/kernels/position_encoder/fused/: launch.cuh  naive.cuh  warp_divergence.cuh
csrc/kernels/position_encoder/prefill/: launch.cuh  naive.cuh  warp_divergence.cuh
csrc/kernels/residual/: launch.cuh  naive.cuh  torch_binding.cuh  vectorised.cuh
csrc/kernels/softmax/: intra_warp.cuh  launch.cuh  naive.cuh  shared_mem.cuh  torch_binding.cuh
csrc/types/: pack128.hpp
csrc/utils/: precision.hpp  torch_utils.hpp  utils.hpp
docs/kernels/: layernorm.md  linear.md  residual.md  softmax.md
tests/cpp/: README.md  test_utils.hpp
tests/cpp/kernels/: CMakeLists.txt  layernorm.cu  linear.cu  residual.cu  softmax.cu
tests/torch/: README.md
tests/torch/kernels/: test_flash_attention.py  test_layernorm.py  test_linear.py  test_residual.py  test_softmax.py
